--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,5 +3,5 @@ pull_request_rules:
     comment:
       message: it works
   conditions:
-  - base=other
+  - base=20210515110640/test_pull_refreshed_after_config_change/master
   name: default
